k8s/istio/00-setup/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: caj-istio-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - ${NAMESPACE}.istio-gateway.apps.${HOST}
    port:
      name: http
      number: 80
      protocol: HTTP
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: caj-virtual-service
spec:
  gateways:
  - caj-istio-gateway
  hosts:
  - ${NAMESPACE}.istio-gateway.apps.${HOST}
  http:
  - match:
    - uri:
        prefix: /api/master-files
    route:
    - destination:
        host: caj-master-file
        port:
          number: 8080
  - match:
    - uri:
        prefix: /api/schedule
    route:
    - destination:
        host: caj-schedule
        port:
          number: 8080
  - match:
    - uri:
        prefix: /api/fare
    route:
    - destination:
        host: caj-fare
        port:
          number: 8080
  - match:
    route:
    - destination:
        host: caj-web
        port:
          number: 8080
